--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,32 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# dependencies
 node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
 dist
 dist-ssr
+build
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# misc
 .DS_Store
+*.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor directories and files
+.vscode
+.idea
 *.suo
 *.ntvs*
 *.njsproj
